--- a/devII/src/app/modules/aluno/solicitacoes-aluno/detalhes-solicitacao/detalhes-solicitacao.component.html
+++ b/devII/src/app/modules/aluno/solicitacoes-aluno/detalhes-solicitacao/detalhes-solicitacao.component.html
@@ -29,9 +29,9 @@
     <div class="step">
       <div class="circle" [ngClass]="progressoFluxo(2)">2</div>
       <div class="etapa">
-        <span class="emAndamento" *ngIf="data.solicitacao.historico[0].etapa == 1 && data.solicitacao.etapa == 2 && data.solicitacao.status !== 'Indeferido'">*Em Análise*</span>
-        <span class="etapaIndeferido" *ngIf="data.solicitacao.status == 'Indeferido'">*Indeferido*</span>
-        <span class="etapaDeferido" *ngIf="data.solicitacao.historico[0].etapa == 1 && data.solicitacao.etapa > 2">*Deferido*</span>
+        <span class="emAndamento" *ngIf="data.solicitacao.etapa == 2 && data.solicitacao.status != 'Indeferido' " >*Em análise*</span>
+        <span class="etapaIndeferido" *ngIf="data.solicitacao.etapa == 2 && data.solicitacao.status === 'Indeferido'   " >*Indeferido*</span>
+        <span class="etapaDeferido" *ngIf="data.solicitacao.etapa > 2" >*Deferido*</span>
       </div>
       <span>Análise setor de estágio</span>
 
@@ -42,8 +42,8 @@
       <div class="etapa">
         <span class="emAndamento" *ngIf="data.solicitacao.historico[1].etapa == 2 && data.solicitacao.etapa == 3 && data.solicitacao.status !== 'Indeferido'">*Em Análise*</span>
 
-        <span class="etapaDeferido" *ngIf="data.solicitacao.historico[1].etapa == 2 && data.solicitacao.etapa > 3">*Deferido*</span>
-        <span class="etapaIndeferido" *ngIf="data.solicitacao.historico[1].etapa == 2 && data.solicitacao.etapa == 3 && data.solicitacao.historico[1].status == 'Indeferido'">*Indeferido*</span>
+        <span class="etapaDeferido" *ngIf="data.solicitacao.etapa > 3 ">*Deferido*</span>
+        <span class="etapaIndeferido" *ngIf="data.solicitacao.etapa == 3 && data.solicitacao.status === 'Indeferido'">*Indeferido*</span>
       </div>
       <span>Assinatura Coordenador de curso</span>
     </div>
@@ -52,11 +52,11 @@
     <div class="step">
       <div class="circle" [ngClass]="progressoFluxo(4)">4</div>
       <div class="etapa">
-        <span class="emAndamento" *ngIf="data.solicitacao.historico[3].etapa == 4 && data.solicitacao.etapa == 4 && data.solicitacao.status !== 'Indeferido'">*Em Análise*</span>
+        <span class="emAndamento" *ngIf="data.solicitacao.historico[4].etapa == 4 && data.solicitacao.etapa == 4 && data.solicitacao.status !== 'Indeferido'">*Em Análise*</span>
 
-        <span class="etapaDeferido" *ngIf="data.solicitacao.historico[3].etapa == 4 && data.solicitacao.etapa > 4">*Deferido*</span>
+        <span class="etapaDeferido" *ngIf=" data.solicitacao.etapa > 4 && data.solicitacao.status !== 'Indeferido'">*Deferido*</span>
 
-        <span class="etapaIndeferido" *ngIf="data.solicitacao.historico[3].etapa == 4 && data.solicitacao.etapa == 4 && data.solicitacao.historico[2].status == 'Indeferido'">*Indeferido*</span>
+        <span class="etapaIndeferido" *ngIf="data.solicitacao.historico[4].etapa == 4 && data.solicitacao.etapa == 4 && data.solicitacao.status == 'Indeferido'">*Indeferido*</span>
       </div>
       <span>Assinatura Diretor</span>
     </div>
@@ -67,7 +67,7 @@
       <div class="etapa">
         <!-- <span class="emAndamento" *ngIf="solicitacao.historico[3].etapa == 5 && solicitacao.etapa == 5 && solicitacao.status !== 'Indeferido'">*Em Análise*</span> -->
 
-          <span class="etapaDeferido" *ngIf="data.solicitacao.historico[4].etapa == 5 && data.solicitacao.etapa == 5 && data.solicitacao.status == 'Deferido'">*Deferido*</span>
+          <span class="etapaDeferido" *ngIf="data.solicitacao.historico[4].etapa == 5 && data.solicitacao.etapa == 5 && data.solicitacao.status == 'Deferido'">*Concluído*</span>
 
           <span class="etapaIndeferido" *ngIf="data.solicitacao.historico[4].etapa == 5 && data.solicitacao.etapa == 5 && data.solicitacao.historico[3].status == 'Indeferido'">*Indeferido*</span>
       </div>
