--- a/devII/src/app/modules/login/login.component.html
+++ b/devII/src/app/modules/login/login.component.html
@@ -18,6 +18,10 @@
         <button type="button" routerLink="/cadastrarAluno">Cadastrar</button>
         <button type="submit" [disabled]="loginForm.invalid">Acessar</button>
       </div>
+      <div class="perdeuSenhaDiv">
+        <a routerLink="/recuperarSenha">Esqueceu a senha?</a>
+      </div>
+      
     </form>
   </div>
 </div>
