--- a/devII/src/app/modules/login/login.component.scss
+++ b/devII/src/app/modules/login/login.component.scss
@@ -23,6 +23,12 @@
     margin-bottom: 10px;
   }
 
+  .perdeuSenhaDiv{
+    display: flex;
+    justify-content: left;
+    padding-top: 4%;
+  }
+
   h3{
     text-align: center;
     margin-bottom: 1%;
