--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/lista-solicitacoes-servidor/lista-solicitacoes-servidor.component.scss
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/lista-solicitacoes-servidor/lista-solicitacoes-servidor.component.scss
@@ -15,6 +15,11 @@
   flex-direction: column;
 }
 
+active{
+  background-color: #371d73;
+  color: #fff;
+}
+
 .cardDecoracao1 {
   width: 264px;
   height: 3px;
