--- a/devII/src/app/modules/aluno/solicitacoes-aluno/solicitacao/solicitacao.component.scss
+++ b/devII/src/app/modules/aluno/solicitacoes-aluno/solicitacao/solicitacao.component.scss
@@ -89,11 +89,16 @@
   display: flex;
   flex-direction: row-reverse;
   padding: 0px 16px 16px 0px;
+  
+  :hover{
+    opacity: 0.8;
+  }
 }
 
 button{
   background: #2B923C;
   font-size: 20px;
+  border-radius: 1px;
   color: #FFFFFF;
   border: 0px;
   cursor: pointer;
