--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/analise-docs/analise-docs.component.html
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/analise-docs/analise-docs.component.html
@@ -12,35 +12,149 @@
   </div>
   <div class="corpo-dados" *ngIf="studentData$ | async as studentData">
     <div class="corpo-dados-caixa gap">
-    <div class="nome-aluno">
-      <span class="dados subtitulo">Dados do aluno</span>
-      <span>Nome: {{ studentData.aluno.nomeCompleto }}</span>
-      <span >Tipo de Estágio: {{ studentData.tipo }}</span>
-      <span>Ingresso: {{ studentData.aluno.ingresso }}</span>
-      <span>Matricula: {{ studentData.aluno.matricula }}</span>
-      <span>Turno: {{ studentData.aluno.turno }}</span>
-    </div>
+      <div class="nome-aluno">
+        <span class="dados subtitulo">Dados do aluno</span>
+        <div class="boxAtualizarDados">
+          <span class="spanTitulo">Nome:</span>
+          <span class="spanValores">{{ studentData.aluno.nomeCompleto }}</span>
+        </div>
+        <div class="boxAtualizarDados">
+          <span class="spanTitulo">Tipo de Estágio:</span>
+          <span class="spanValores">{{ studentData.tipo }}</span>
+        </div>
+        <div class="boxAtualizarDados">
+          <span class="spanTitulo">Ingresso: </span>
+          <span class="spanValores">{{ studentData.aluno.ingresso }}</span>
+        </div>
+        <div class="boxAtualizarDados">
+          <span class="spanTitulo">Matricula: </span>
+          <span class="spanValores">{{ studentData.aluno.matricula }}</span>
+        </div>
+        <div class="boxAtualizarDados">
+          <span class="spanTitulo">Turno:</span>
+          <span class="spanValores">{{ studentData.aluno.turno }}</span>
+        </div>
+      </div>
 
-    <div class="infos-aluno">
-      <span class="dados subtitulo">Dados da Empresa</span>
-      <span>Empresa: {{ studentData.nomeEmpresa }}</span>
-      <span>Agente: {{ studentData.agente }}</span>
-      <span>Contato: {{ studentData.contatoEmpresa }}</span>
-      <span>Tipo: {{ studentData.ePrivada ? 'Privada' : 'Publica' }}</span>
-    </div>
-    <div class="curso-aluno">
-      <span class="dados subtitulo">Dados da solicitação</span>
-      <span>Data da solicitação: {{ datePipe.transform(studentData.dataSolicitacao, 'dd-MM-yyyy') }}</span>
-      <span>Data do inicio do contrato:{{ dataInicioEstagio}}</span>
-      <span >Data do fim do contrato:
-        <input class="data"  (blur)="trocarValidadeContrato()" type="text" maxlength="10" [value]="dataFinalEstagio"  (input)="onInput($event)" pattern="(0[1-9]|[12][0-9]|3[01])/(0[1-9]|1[0-2])/\d{4}">
-      </span>
-      <span>Curso: <b class="curso">{{ studentData.aluno.curso.nomeCurso }}</b></span>
+      <div class="infos-aluno" *ngIf="!editarEmpresa">
+        <span class="dados subtitulo"
+          >Dados da Empresa
+          <button class="" (click)="editarEmpresa = !editarEmpresa" *permission="Roles.ROLE_SESTAGIO">
+            <mat-icon aria-hidden="false" fontIcon="edit"></mat-icon>
+          </button>
+        </span>
+        <div class="boxAtualizarDados">
+          <span class="spanTitulo">Empresa:</span>
+          <span class="spanValores"> {{ empresa.nomeEmpresa }}</span>
+        </div>
+        <div class="boxAtualizarDados">
+          <span class="spanTitulo">Contato:</span>
+          <span class="spanValores"> {{ empresa.contatoEmpresa }}</span>
+        </div>
+        <div class="boxAtualizarDados">
+          <span class="spanTitulo">Agente:</span>
+          <span class="spanValores"> {{ empresa.agente }}</span>
+        </div>
+        <div class="boxAtualizarDados">
+          <span class="spanTitulo">Tipo:</span>
+          <span class="spanValores">
+            {{ empresa.ePrivada ? "Privada" : "Pública" }}</span
+          >
+        </div>
+      </div>
+
+      <div class="infos-aluno" *ngIf="editarEmpresa">
+        <span class="dados subtitulo"
+          >Dados da Empresa
+          <button class="" (click)="atualizarEmpresa()">
+            <mat-icon aria-hidden="false" fontIcon="done"></mat-icon></button
+        ></span>
+        <div class="boxAtualizarDados">
+          <span>Empresa:</span>
+          <input
+            class="inputBox"
+            type="text"
+            [(ngModel)]="empresa.nomeEmpresa"
+            placeholder="Nome da empresa"
+          />
+        </div>
+        <div class="boxAtualizarDados">
+          <span>Agente:</span>
+          <input
+            class="inputBox"
+            type="text"
+            [(ngModel)]="empresa.agente"
+            placeholder="Nome do agente"
+          />
+        </div>
+        <div class="boxAtualizarDados">
+          <span>Contato:</span>
+          <input
+            class="inputBox"
+            type="text"
+            [(ngModel)]="empresa.contatoEmpresa"
+            placeholder="Contato da empresa"
+            maxlength="11"
+          />
+        </div>
+        <div class="boxAtualizarDados">
+          <label>é privada?</label>
+          <input
+            class="inputBox checkDiretor"
+            type="checkbox"
+            [(ngModel)]="empresa.ePrivada"
+          />
+        </div>
+      </div>
+
+      <div class="curso-aluno">
+        <span class="dados subtitulo">Dados da solicitação 
+            <button  (click)="editarDatas = !editarDatas" *ngIf="!editarDatas && authenticationService.role === 3">
+            <mat-icon  aria-hidden="false" fontIcon="edit"></mat-icon >
+          </button>
+          <button class="" (click)="trocarValidadeContrato()" *ngIf="editarDatas">
+            <mat-icon aria-hidden="false" fontIcon="done"></mat-icon></button
+        ></span>
+
+        <div class="boxAtualizarDados">
+          <span> Data da solicitação:</span>
+          <span>
+            {{ datePipe.transform(studentData.dataSolicitacao, "dd-MM-yyyy") }}
+          </span>
+        </div>
+        <div class="boxAtualizarDados">
+          <span> Início do contrato:</span>
+          <span *ngIf="!editarDatas">{{ dataInicioEstagio }}</span>
+          <input *ngIf="editarDatas"
+          class="data"
+          type="text"
+          maxlength="10"
+          [value]="dataInicioEstagio"
+          [(ngModel)]="dataInicioEstagio"
+          (input)="onInput($event , 'nova')"
+          pattern="(0[1-9]|[12][0-9]|3[01])/(0[1-9]|1[0-2])/\d{4}"
+           />
+        </div>
+        <div class="boxAtualizarDados">
+          <span> Fim do contrato:</span>
+          <span *ngIf="!editarDatas">{{ dataFinalEstagio }}</span>
+          <input *ngIf="editarDatas"
+          class="data"
+          type="text"
+          maxlength="10"
+          [value]="dataFinalEstagio"
+          [(ngModel)]="dataFinalEstagio"
+          (input)="onInput($event , 'final')"
+          pattern="(0[1-9]|[12][0-9]|3[01])/(0[1-9]|1[0-2])/\d{4}"
+           />
+        </div>
+        <div class="boxAtualizarDados">
+          <span>Curso:</span>
+          <span><b class="curso">{{ studentData.aluno.curso.nomeCurso }}</b></span>
+        </div>
+      </div>
     </div>
   </div>
-  </div>
-
-  
 
   <div>
     <div>
@@ -110,24 +224,36 @@
       <mat-stepper #stepper>
         <mat-step label="Download" state="phone">
           <div class="titulosInfoDocumentos">
-          <p class="titulo" *ngIf="documentList$ | async as docsData">
-            Nome do documento
-          </p>
-          <p class="titulo">
-            Estado do documento
-          </p>
-          <p class="titulo" *permission="Roles.ROLE_SESTAGIO">
-            Documento para Diretor
-          </p>
-          <p class="titulo">
-            Download de Documentos
-          </p>
-        </div>
+            <p class="titulo" *ngIf="documentList$ | async as docsData">
+              Nome do documento
+            </p>
+            <p class="titulo">Estado do documento</p>
+            <p class="titulo" *permission="Roles.ROLE_SESTAGIO">
+              Documento para Diretor
+            </p>
+            <p class="titulo">Download de Documentos</p>
+          </div>
           <div class="historico" *ngFor="let doc of documentList$ | async">
             <div class="gap">
-              <p [ngClass]="{'arquivo': doc.paraDiretor && authenticationService.role === 4}">{{ doc.nome }}</p>
-              <p class="assinado" >{{doc.assinado ? 'Documento assinado.' : 'Original' }}</p>
-              <p *permission="Roles.ROLE_SESTAGIO"><input type="checkbox" class="checkDiretor" (ngModelChange)="direcionarDiretor(doc.id)"  *permission="Roles.ROLE_SESTAGIO" [(ngModel)]="doc.paraDiretor"></p>
+              <p
+                [ngClass]="{
+                  arquivo: doc.paraDiretor && authenticationService.role === 4
+                }"
+              >
+                {{ doc.nome }}
+              </p>
+              <p class="assinado">
+                {{ doc.assinado ? "Documento assinado." : "Original" }}
+              </p>
+              <p *permission="Roles.ROLE_SESTAGIO">
+                <input
+                  type="checkbox"
+                  class="checkDiretor"
+                  (ngModelChange)="direcionarDiretor(doc.id)"
+                  *permission="Roles.ROLE_SESTAGIO"
+                  [(ngModel)]="doc.paraDiretor"
+                />
+              </p>
               <button mat-icon-button color="primary" (click)="download(doc)">
                 <mat-icon class="salvar">save_alt</mat-icon>
               </button>
@@ -156,7 +282,7 @@
           </div>
         </mat-step>
       </mat-stepper>
-      <hr>
+
       <div class="botoes" *ngIf="studentData$ | async as studentData">
         <button
           class="deferir"
@@ -168,53 +294,18 @@
           > Deferir
         </button>
 
-        <div class="gerencia">
-          <div class="edicoes">
-            <mat-form-field class="observacao">
-              <mat-label>Observação</mat-label>
-              <textarea
-                matInput
-                (blur)="atualizarObservacao()"
-                [(ngModel)]="observacao"
-                class="observacao"
-              ></textarea>
-            </mat-form-field>
-
-            <mat-form-field>
-              <mat-label>Status</mat-label>
-              <select
-                matNativeControl
-                (blur)="atualizarStatus()"
-                [(ngModel)]="status"
-              >
-                <option *ngFor="let items of item">{{ items }}</option>
-              </select>
-            </mat-form-field>
-
-            <mat-form-field *ngIf="authenticationService.role === 3">
-              <mat-label>Etapa</mat-label>
-              <select
-                matNativeControl
-                (blur)="atualizarEtapa()"
-                [(ngModel)]="etapaAtual"
-              >
-                <option
-                  *ngFor="let item of listaEtapas | keyvalue"
-                  value="{{ item.value }}"
-                >
-                  {{ item.key }}
-                </option>
-              </select>
-            </mat-form-field>
-          </div>
-          <button mat-stroked-button color="warn" (click)="trocarEditar()">
-            {{
-              studentData.editavel
-                ? "Fechar a edição de documentos para o aluno"
-                : "Abrir a edição de documentos para o aluno"
-            }}
-          </button>
-        </div>
+        <button
+          mat-stroked-button
+          color="warn"
+          class="deferir"
+          (click)="trocarEditar()"
+        >
+          {{
+            studentData.editavel
+              ? "Fechar a edição de documentos para o aluno"
+              : "Abrir a edição de documentos para o aluno"
+          }}
+        </button>
 
         <button
           class="indeferir"
@@ -225,6 +316,52 @@
         >
           > Indeferir
         </button>
+      </div>
+
+      <hr class="gerencia" />
+      <div class="proximo subtitulo" *ngIf="eSetorEstagio">
+        <span class="dados">Gerenciar solicitação</span>
+      </div>
+
+      <div class="gerencia" *ngIf="eSetorEstagio">
+        <div class="edicoes">
+          <mat-form-field class="observacao">
+            <mat-label>Adicionar observação <br />para o aluno</mat-label>
+            <textarea
+              matInput
+              (blur)="atualizarObservacao()"
+              [(ngModel)]="observacao"
+              class="observacao"
+            ></textarea>
+          </mat-form-field>
+
+          <mat-form-field>
+            <mat-label>Definir status</mat-label>
+            <select
+              matNativeControl
+              (blur)="atualizarStatus()"
+              [(ngModel)]="status"
+            >
+              <option *ngFor="let items of item">{{ items }}</option>
+            </select>
+          </mat-form-field>
+
+          <mat-form-field *ngIf="authenticationService.role === 3">
+            <mat-label>Definir Etapa</mat-label>
+            <select
+              matNativeControl
+              (blur)="atualizarEtapa()"
+              [(ngModel)]="etapaAtual"
+            >
+              <option
+                *ngFor="let item of listaEtapas | keyvalue"
+                value="{{ item.value }}"
+              >
+                {{ item.key }}
+              </option>
+            </select>
+          </mat-form-field>
+        </div>
       </div>
     </div>
   </div>
