--- a/devII/src/app/modules/servidor/lista-estagiarios/lista-estagiarios.component.html
+++ b/devII/src/app/modules/servidor/lista-estagiarios/lista-estagiarios.component.html
@@ -1,11 +1,20 @@
+<div class="titulo">
+  <p>Lista de estagiários</p>
+</div>
 <div class="container">
-
     <table class="table-container" id="tabela">
       <thead>
         <tr class="titulosEstagiarios">
-          <th>Estudante</th>
+          <th>#</th>
+          <th class="busca">
+            <div class="buscaButton">
+            <button class="next " (click)="ativarBuscaNome()"><mat-icon aria-hidden="false" fontIcon="{{buscarNomeOn ? 'search_off' : 'search'}}"></mat-icon></button>
+            <span class="loader" *ngIf="isProcurando"></span>
+          </div>
+            <input type="text" *ngIf="buscarNomeOn" (keydown)="onEnter($event)" (blur)="listaDeEstagiariosNome()" [(ngModel)]="nomeBusca" ><span *ngIf="!buscarNomeOn">Nome</span>
+          </th>
           <th>Drive</th>
-          <th>Matrícula</th>
+          <th class="tituloTeste2">Matrícula</th>
           <th>E-mail</th>
           <!-- <th>Link Drive</th>  -->
           <th>Curso</th>
@@ -23,11 +32,12 @@
       <tbody>
 
         <tr *ngFor="let estagiario of estagiarios">
+          <td>{{estagiario.id}}</td>
           <td>{{ estagiario.solicitacao.aluno.nomeCompleto }}</td>
-          <td><a [href]="estagiario.urlPastaDocumentos"><mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="link"></mat-icon></a></td>
+          <td><a [href]="estagiario.urlPastaDocumentos" target="_blank"><mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="link"></mat-icon></a></td>
           <td>{{ estagiario.solicitacao.aluno.matricula }}</td>
           <td>{{ estagiario.solicitacao.aluno.usuarioSistema.email}}
-          <td>{{ estagiario.solicitacao.aluno.curso.nomeCurso }}</td>
+          <td>{{ qualCurso(estagiario.solicitacao.aluno.curso.id )}}</td>
           <td>{{ estagiario.orientador}}</td>
           <td>{{ estagiario.solicitacao.nomeEmpresa }}</td>
           <td>{{ estagiario.solicitacao.contatoEmpresa }}</td>
@@ -44,4 +54,16 @@
       </tbody>
     </table>
   </div>
+  
   <h2 *ngIf="estagiarios.length == 0" class="container">Não há estagiários cadastrados.</h2>
+  <div class="paginas">
+    
+  <button class="next buttonOn" (click)="paginaAnterior()" [ngClass]="{'buttonOff' : paginaAtual === 0}">
+    Anterior
+  </button>
+  <span class=""> <p>pág.<b>{{paginaAtual}}</b></p>
+  </span>
+  <button class="next buttonOn" (click)="proximaPagina()" [ngClass]="{'buttonOff' : estagiarios.length === 0}" [disabled]="estagiarios.length === 0">
+    Próxima
+  </button>
+  </div>
