--- a/devII/src/app/modules/vagas-estagio/mural-de-vagas/mural-de-vagas.component.html
+++ b/devII/src/app/modules/vagas-estagio/mural-de-vagas/mural-de-vagas.component.html
@@ -3,9 +3,93 @@
       <app-vagas [cardVagas]="vagas" class="mural"></app-vagas>
     </div>
   </div>
-  
+  Orientações
+Estágio é o ato educativo escolar supervisionado, desenvolvido num ambiente de trabalho, que visa à preparação para o trabalho produtivo de estudantes que estejam frequentando o ensino regular em instituições de ensino superior, de educação profissional, de ensino médio, de educação especial, dos anos finais do ensino fundamental e na modalidade profissional da educação de jovens e adultos, devendo ser coerente com o perfil profissional e propiciar a complementação do processo de ensino e de aprendizagem.
+
+Contato
+
+E-mail: estagios@restinga.ifrs.edu.br
+
+As solicitações devem ser enviadas somente por e-mail. O prazo para resposta é de até 05 (cinco) dias úteis.
+
+Telefone: (51) 3247-8409
+
+ 
+
+Orientações gerais
+
+A instituição de ensino é a última a assinar os documentos de estágio. Portanto, todas as vias dos documentos devem conter todas as assinaturas para somente depois coletar as assinaturas da Direção-geral e/ou professor(a) orientador(a).
+
+Os documentos podem ser assinados digitalmente. Caso não possua assinatura digital, utilize o assinador do Gov.br.
+
+Para solicitar a assinatura dos documentos de estágios é necessário encaminhar em arquivo PDF os documentos de estágio para o e-mail: estagios@restinga.ifrs.edu.br.
+
+Orientações para agentes de integração e concedentes
+
+Mural de Oportunidades – divulgação de bolsas e vagas de estágio.
+
+ 
+
+ESTÁGIOS NÃO OBRIGATÓRIOS
+
+Manual de Estágios não obrigatórios
+
+Documentos
+
+*Para preenchimento deve fazer download ou uma cópia.
+
+Assinador digital GOV.BR
+Termo de compromisso de estágio não obrigatório
+Plano de atividades
+Termo aditivo estágio não obrigatório
+Termo de Rescisão Estágio
+Termo de realização de estágio
+Relatório de Estágio Não Obrigatório
+ 
+
+ESTÁGIOS OBRIGATÓRIOS
+
+Manual de Estágios Obrigatórios
+
+Orientadores do Estágio Obrigatório 2023/1
+
+Dúvidas referente a estágio obrigatórios deve procurar a coordenação do curso.
+
+Documentos
+
+*Para preenchimento deve fazer download ou uma cópia.
+
+Assinador digital GOV.BR
+Termo de compromisso de estágio obrigatório
+Plano de atividades
+Termo aditivo estágio obrigatório
+Termo de Rescisão Estágio
+Termo de realização de estágio
+Relatório Final de Estágio Obrigatório
+Termo de Formalização de Estágio Curricular Obrigatório
+Declaração da Empresa de Atividades Realizadas
+Declaração da Empresa de Atividades Atuais
+ 
+
+Legislação e normas superiores
+
+Lei nº 9.394, de 20 de dezembro de 1996 – Estabelece as diretrizes e bases da educação nacional
+Lei nº 11.788, de 25 de setembro de 2008 – Lei dos Estágios
+Instrução Normativa nº 213, de 17 de dezembro de 2019 – Estabelece orientação sobre a aceitação de estagiários no âmbito da Administração Pública Federal direta, autárquica e fundacional
+Cartilha esclarecedora sobre a Lei do Estágio – Ministério do Trabalho e Emprego
+Resolução CNE/CEB n.º 1, de 21 de janeiro de 2004 – Estabelece Diretrizes Nacionais para a organização e a realização de Estágio de alunos da Educação Profissional e do Ensino Médio, inclusive nas modalidades de Educação Especial e de Educação de Jovens e Adultos
+Resolução CNE/CEB nº 2, de 4 de abril de 2005 – Modifica a redação do § 3º do artigo 5º da Resolução CNE/CEB nº 1/2004, até nova manifestação sobre estágio supervisionado pelo Conselho Nacional de Educação
+Parecer CNE/CES nº 416/2012, aprovado em 8 de novembro de 2012 – Consulta sobre estágio no exterior.
+Parecer CNE/CEB nº 1/2018, aprovado em 24 de janeiro de 2018 – quanto à possibilidade de declarações de experiência profissional emitidas por empresas substituírem integralmente o estágio curricular obrigatório.
+Resolução CNE/CEB nº 3, de 21 de novembro de 2018 – Atualiza as Diretrizes Curriculares Nacionais para o Ensino Médio.
+Resolução CNE/CP nº 2, de 20 de dezembro de 2019 – Define as Diretrizes Curriculares Nacionais para a Formação Inicial de Professores para a Educação Básica e institui a Base Nacional Comum para a Formação Inicial de Professores da Educação Básica (BNC-Formação).
+Resolução CNE/CP nº 1, de 5 de janeiro de 2021 – Define as Diretrizes Curriculares Nacionais Gerais para a Educação Profissional e Tecnológica.
+Normativas internas
+
+Instrução Normativa PROEX/PROEN/DGP 001/2020 – Regulamenta as diretrizes de estágio obrigatório e não obrigatório do IFRS
+Instrução Normativa PROEX/IFRS nº 001, de 03 de fevereiro de 2021 – Estabelece o fluxo para a realização de convênios, acordos de cooperação com agentes de integração e acordos de parceria internacional entre o IFRS e instituições públicas ou privadas para fins de estágios
   <ng-template #semVagas>
     <div class="semVagas">
-      <p>Não Temos Vagas de Estágio</p>
+      <p>Orientações</p>
     </div>
   </ng-template>
