--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/analise-docs/analise-docs.component.html
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/analise-docs/analise-docs.component.html
@@ -260,7 +260,7 @@
             </div>
           </div>
           <div class="proximo" *ngIf="!disableButton">
-            <button [disabled]="disableButton" mat-button matStepperNext>
+            <button class="proximoB" [disabled]="disableButton" mat-button matStepperNext>
               Proximo
             </button>
           </div>
