--- a/devII/src/app/modules/servidor/lista-servidor/lista-servidor.component.scss
+++ b/devII/src/app/modules/servidor/lista-servidor/lista-servidor.component.scss
@@ -1,65 +1,77 @@
 .card {
-    padding: 2px 20px 0px 20px;
-    font-weight: 500;
-    width: calc(99% - 20px);
-    height: 3em;
-    background: #e9e9e9;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    font-size: large;
-    display: flex;
-    gap: 5px;
-    justify-content: space-between;
-    margin: 1ch;
-    align-items: center;
-    text-align: center;
-  }
+  padding: 2px 20px 0px 20px;
+  font-weight: 500;
+  width: calc(99% - 20px);
+  height: 3em;
+  border: 0px solid rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-size: large;
+  display: flex;
+  gap: 5px;
+  justify-content: space-between;
+  margin: 1ch;
+  align-items: center;
+  text-align: center;
 
-  .titulo {
-    padding: 30px;
-    display: flex;
-    justify-content: center;
 
-    p {
-        font-weight: 700;
-        font-size: 30px;
-        border-bottom: 4px solid #2b923c;
-        padding-bottom: 8px;
-    }
 }
-  h1{
-    font-size: 1.5em;
-    font-weight: bolder;
-    width: 100%;
-    align-self: center;
+
+li{
+  list-style: none;
+  &:nth-child(even) {
+    background: #e9e9e9;
   }
 
-  .cardHeader{
-    font-weight: bolder;
-    font-size: 1.5em !important;
-
+  &:nth-child(odd) {
+    background: #f1f1f1;
   }
+}
 
-  .espacamento {
-    margin-bottom: 25px;
+.titulo {
+  padding: 30px;
+  display: flex;
+  justify-content: center;
+
+  p {
+    font-weight: 700;
+    font-size: 30px;
+    border-bottom: 4px solid #2b923c;
+    padding-bottom: 8px;
   }
+}
 
-  .nome, .curso, .email, .cargo, .acoes{
+h1 {
+  font-size: 1.5em;
+  font-weight: bolder;
+  width: 100%;
+  align-self: center;
+}
 
-    margin-left: 5%;
-    width: 15%;
-   
+.cardHeader {
+  font-weight: bolder;
+  font-size: 1.5em !important;
+}
 
-  }
+.espacamento {
+  margin-bottom: 25px;
+}
 
-  button{
-      border: 0px solid #000000;
-      background: #2F9E41;
-      font-style: normal;
-      font-size: 25px;
-      border-radius: 5px;
-      color: #FFFFFF;
-      margin-right: 5px;;
-      cursor: pointer;
-    
-  }
+.nome,
+.curso,
+.email,
+.cargo,
+.acoes {
+  margin-left: 5%;
+  width: 15%;
+}
+
+button {
+  border: 0px solid #000000;
+  background: #2F9E41;
+  font-style: normal;
+  font-size: 25px;
+  border-radius: 5px;
+  color: #FFFFFF;
+  margin-right: 5px;
+  cursor: pointer;
+}
